CaptureEventSinkFactory test with minicluster.