@@ -6,6 +6,15 @@ tasks.withType(JavaCompile).configureEach {
     options.compilerArgs << '-Xlint:unchecked'
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs(
+        '--add-opens=java.base/java.util=ALL-UNNAMED',
+        '--add-opens=java.base/java.lang=ALL-UNNAMED',
+        '--add-opens=java.base/java.io=ALL-UNNAMED',
+        '--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED'
+    )
+}
+
 ext {
     flinkVersion = '1.18.0'
 }
